formulär som lägger till jobb

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title >Moment 2 || DT207G </title>
     <script src="/main.js"></script>
-</head>
+    <link rel="stylesheet" href="main.css">
+   </head>
 <body>
-    <h1>Hej hej</h1>
-    
+    <h1>CV</h1>
+
+    <div id="data-container"></div>
+
+    <a href="add.html">Länk</a>
 </body>
 </html>
