--- a/add.html
+++ b/add.html
@@ -5,32 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add jobtitle</title>
     <script src="/main.js"></script>
-</head>
+    </head>
 <body>
 
     <h1>Lägg till Jobberfaranhet</h1>
 
-    <form method="post" id="workForm">
+    <form method="post" id="workForm" action="/api/workers">
         <label for="companyname">Company Name:</label>
         <input type="text" id="companyname" name="companyname" required><br>
 
         <label for="jobtitle">Job Title:</label>
-        <input type="text" id="jobtitle" name="jobtitle" required><br><br>
+        <input type="text" id="jobtitle" name="jobtitle" required><br>
         
         <label for="location">Location:</label>
-        <input type="text" id="location" name="location" required><br><br>
+        <input type="text" id="location" name="location" required><br>
 
         <label for="startdate">Start Date:</label>
-        <input type="date" id="startdate" name="startdate" required><br><br>
+        <input type="date" id="startdate" name="startdate" required><br>
 
         <label for="enddate">End Date:</label>
-        <input type="date" id="enddate" name="enddate" required><br><br>
+        <input type="date" id="enddate" name="enddate" required><br>
 
         <label for="description">Description:</label><br>
-        <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+        <textarea id="description" name="description" rows="4" cols="50" required></textarea><br>
 
         <input type="submit" value="Submit">
-
     </form>
 
     <a href="index.html">Länk</a>
