--- a/add.html
+++ b/add.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add jobtitle</title>
     <script src="/main.js"></script>
+    <link rel="stylesheet" href="main.css">
     </head>
 <body>
 
     <h1>Lägg till Jobberfaranhet</h1>
+
+
+    <div class="container">
+        <a href="index.html">CV</a>
+        <span><a href="add.html">Lägg till</a></span>
+        <a href="about.html">Om uppgift</a>
 
     <form method="post" id="workForm" action="/api/workers">
         <label for="companyname">Company Name:</label>
@@ -31,8 +38,8 @@
 
         <input type="submit" value="Submit">
     </form>
+</div>
 
-    <a href="index.html">Länk</a>
     
 </body>
 </html>
