--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="main.css">
    </head>
 <body>
-    <h1>CV</h1>
 
-    <div id="data-container"></div>
+   
+  <h1>CV</h1>
+   
+    <div class="container">
+        <span><a href="index.html">CV</a></span>
+        <a href="add.html">Lägg till</a>
+        <a href="about.html">Om uppgift</a>
+      <div id="data-container"></div>
+    </div>
 
-    <a href="add.html">Länk</a>
 </body>
 </html>
